# gp12_sim_ws

./: .gitignore  README.md  moveit_setup.md  pink_setup.md
src/gp12_gazebo/: CMakeLists.txt  package.xml
src/gp12_gazebo/config/: gp12_controllers.yaml
src/gp12_gazebo/launch/: rviz2.launch.py  sim.launch.py
src/gp12_gazebo/urdf/: gp12.xacro  gp12_macro.xacro
src/gp12_imu_control/: package.xml  setup.cfg  setup.py
src/gp12_imu_control/gp12_imu_control/: hyperimu_bridge.py  imu_to_moveit.py
src/gp12_imu_control/launch/: imu_control.launch.py
src/gp12_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/gp12_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  motoman_gp12.ros2_control.xacro  motoman_gp12.srdf  motoman_gp12.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
src/gp12_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/gp12_simulation/: CMakeLists.txt  package.xml
src/gp12_simulation/config/: gp12_controllers.yaml
src/gp12_simulation/launch/: gp12.launch.py  gp12_pink.launch.py  gp12_sim.launch.py  gripper.launch.py  moveit.launch.py  rviz2.launch.py  sim.launch.py
src/gp12_simulation/scripts/: pink_ik_node.py  script.py
src/gp12_simulation/urdf/: common_materials.xacro  gp12.urdf  gp12.xacro  gp12_gripper.xacro  gp12_macro.xacro  robotiq_2f_140.xacro  robotiq_2f_140_macro.xacro  robotiq_arg2f.xacro
