<?xml version="1.0"?>
<package format="3">
  <name>gp12_simulation</name>
  <version>0.1.0</version>
  <description>URDF/Xacro description package for the Yaskawa Motoman GP12 robot (RViz2 + MoveIt).</description>

  <maintainer email="anupdtarwade@gmail.com">Anup</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_planning_interface</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>